--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.github.Baseflow:PhotoView:2.3.0'
+    //implementation 'io.github.chrisbanes:photoview:2.3.0'
 }
