Enlarge Photo by PhotoView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="false" />
+        <activity android:name=".ui.home.PhotoViewActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
